--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="./resources/css/style.css">
   <meta charset="UTF-8">
@@ -58,7 +57,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="./resources/images/feature-1.png"/>
+            <img src="images/feature-1.png" />
           </div>
           <div class="content">
             <h2>Advanced, automatic, instant</h2>
@@ -69,7 +68,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="./resources/images/feature-2.png" />
+            <img src="images/feature-2.png" />
           </div>
           <div class="content">
             <h2>Beautifully crafted inside-out</h2>
@@ -101,7 +100,7 @@
       </div>
     </div>
 
-    <!-- Quotes Section -->
+    <!-- Quotes Section
     <div id="quotes-section">
       <div class="content center">
         <span class="quote">“It’s truly something that could create a brand new photography Renaissance”</span>
