--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="images/feature-1.png" />
+            <img src="/resources/images/feature-1.png" />
           </div>
           <div class="content">
             <h2>Advanced, automatic, instant</h2>
@@ -69,7 +69,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="images/feature-2.png" />
+            <img src="/resources/images/feature-2.png" />
           </div>
           <div class="content">
             <h2>Beautifully crafted inside-out</h2>
@@ -87,21 +87,21 @@
       </div>
       <div class="images-container">
         <div class="image-container">
-          <img src="./resources/images/filter-1.png" />
+          <img src="/resources/images/filter-1.png" />
         </div>
         <div class="image-container">
-          <img src="./resources/images/filter-2.png" />
+          <img src="/resources/images/filter-2.png" />
         </div>
         <div class="image-container">
-          <img src="./resources/images/filter-3.png" />
+          <img src="/resources/images/filter-3.png" />
         </div>
         <div class="image-container extra">
-          <img src="./resources/images/filter-4.png" />
+          <img src="/resources/images/filter-4.png" />
         </div>
       </div>
     </div>
 
-    <!-- Quotes Section
+    <!-- Quotes Section -->
     <div id="quotes-section">
       <div class="content center">
         <span class="quote">“It’s truly something that could create a brand new photography Renaissance”</span>
@@ -116,7 +116,6 @@
         <span class="location">Designed in NYC</span>
       </div>
     </footer>
-
   </div>
 </body>
 </html>
