--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="./resources/css/style.css">
   <meta charset="UTF-8">
-  <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fotomatic</title>
 </head>
 <body>
   <!-- Header -->
@@ -21,14 +22,14 @@
         <ul>
           <li><a href="#">Product detail</a></li>
           <li><a href="#">About us</a></li>
-          <li><a href="https://www.instagram.com/">Follow us <img class="icon" src="/resources/images/instagram.png"></a></li>
+          <li><a href="https://www.instagram.com/">Follow us <img class="icon" src="/resources/images/instagram.png" alt="Instagram logo"></a></li>
         </ul>
       </nav>
       <nav class="mobile">
         <ul>
-          <li><a href="#"><img src="resources/images/ic-logo.svg"></a></li>
-          <li><a href="#"><img src="resources\images\ic-product-detail.svg"></a></li>
-          <li><a href="#"><img src="resources/images/ic-about-us.svg"></a></li>
+          <li><a href="#"><img src="resources/images/ic-logo.svg" alt="Fotomatic logo"></a></li>
+          <li><a href="#"><img src="resources\images\ic-product-detail.svg" alt="Product detail"></a></li>
+          <li><a href="#"><img src="resources/images/ic-about-us.svg" alt="About us"></a></li>
           <li><a href="#" class="button">Join us</a></li>
         </ul>
       </nav>
@@ -61,7 +62,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="/resources/images/feature-1.png" />
+            <img src="/resources/images/feature-1.png" alt="Camera Lens pointing towards fjord"/>
           </div>
           <div class="content">
             <h2>Advanced, automatic, instant</h2>
@@ -72,7 +73,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="/resources/images/feature-2.png" />
+            <img src="/resources/images/feature-2.png" alt="Camera lens on a table"/>
           </div>
           <div class="content">
             <h2>Beautifully crafted inside-out</h2>
@@ -90,16 +91,16 @@
       </div>
       <div class="images-container">
         <div class="image-container">
-          <img src="/resources/images/filter-1.png" />
+          <img src="/resources/images/filter-1.png" alt="Women holding rose" />
         </div>
         <div class="image-container">
-          <img src="/resources/images/filter-2.png" />
+          <img src="/resources/images/filter-2.png" alt="Cherry Blossoms"/>
         </div>
         <div class="image-container">
-          <img src="/resources/images/filter-3.png" />
+          <img src="/resources/images/filter-3.png" alt="Man point camera towards us"/>
         </div>
         <div class="image-container extra">
-          <img src="/resources/images/filter-4.png" />
+          <img src="/resources/images/filter-4.png" alt="Rural area in a valley"/>
         </div>
       </div>
     </div>
@@ -108,7 +109,7 @@
     <div id="quotes-section">
       <div class="content center">
         <span class="quote">“It’s truly something that could create a brand new photography Renaissance”</span>
-        <img class="quote-citation" src="./resources/images/photography-logo.png" />
+        <img class="quote-citation" src="./resources/images/photography-logo.png" alt="Photography Society Logo"/>
       </div>
     </div>
 
