Added favicon and fixed responsive design for mobile

--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+
+  <!--Favicon & Title-->
+  <title>Fotomatic</title>
+  <link rel="shortcut icon" href="./resources/images/favicon.ico" type="image/x-icon">
+
+  <!--Stylesheets-->
   <link rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="./resources/css/style.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fotomatic</title>
 </head>
 <body>
   <!-- Header -->
@@ -66,7 +72,7 @@
           </div>
           <div class="content">
             <h2>Advanced, automatic, instant</h2>
-            <h3>Shutter speed, apperture and flash output adjust automatically</h3>
+            <h3>Shutter speed, aperture and flash output adjust automatically</h3>
           </div>
         </div>
       </div>
@@ -77,7 +83,7 @@
           </div>
           <div class="content">
             <h2>Beautifully crafted inside-out</h2>
-            <h3>From the paint outside to the tiny screw inside, Fotomatic is crafted with love and 20-year of expertise</h3>
+            <h3>From the paint outside to the tiny screws inside, Fotomatic is crafted with love and 20-year of expertise</h3>
           </div>
         </div>
       </div>
@@ -87,7 +93,7 @@
     <div id="filters-section">
       <div class="content center">
         <h2>Over 20+ filters to choose from</h2>
-        <h3>Feed your creativity with 20 different filter designed by our eclectic in-house photographers!</h3>
+        <h3>Feed your creativity with 20 different filter designed by our electic in-house photographers!</h3>
       </div>
       <div class="images-container">
         <div class="image-container">
@@ -116,7 +122,7 @@
     <!-- Footer -->
     <footer>
       <div class="content">
-        <span class="copyright">© 2016  Fotomatic, All Rights Reserved</span>
+        <span class="copyright">© 2024  Fotomatic, All Rights Reserved</span>
         <span class="location">Designed in NYC</span>
       </div>
     </footer>
