Added an About Me Page

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
       <nav class="desktop">
         <ul>
           <li><a href="#">Product detail</a></li>
-          <li><a href="#">About us</a></li>
+          <li><a href="/resources/html/about-us.html">About us</a></li>
           <li><a href="https://www.instagram.com/">Follow us <img class="icon" src="/resources/images/instagram.png" alt="Instagram logo"></a></li>
         </ul>
       </nav>
       <nav class="mobile">
         <ul>
-          <li><a href="#"><img src="resources/images/ic-logo.svg" alt="Fotomatic logo"></a></li>
+          <li><a href="index.html"><img src="resources/images/ic-logo.svg" alt="Fotomatic logo"></a></li>
           <li><a href="#"><img src="resources\images\ic-product-detail.svg" alt="Product detail"></a></li>
-          <li><a href="#"><img src="resources/images/ic-about-us.svg" alt="About us"></a></li>
+          <li><a href="/resources/html/about-us.html"><img src="resources/images/ic-about-us.svg" alt="About us"></a></li>
           <li><a href="#" class="button">Join us</a></li>
         </ul>
       </nav>
